# VINS-FusionCommentByLuo

./: README.md  问题.md
camera_models/: CMakeLists.txt
config/euroc/: euroc_mono_imu_config.yaml
global_fusion/: CMakeLists.txt
learnnote/: processMeasurements测量线程分析.md  sync_process线程分析.md  入口函数.md
loop_fusion/: CMakeLists.txt
loop_fusion/src/: pose_graph.cpp  pose_graph_node.cpp
note/思维导图源文件/: loop_fusion.drawio  mainfunction.drawio
output/: MH01_vio.csv  MH01_vio_loop.csv  MH02_vio.csv  MH02_vio_loop.csv  MH03_vio.csv  MH03_vio_loop.csv  MH04_vio.csv  MH04_vio_loop.csv  MH05_vio.csv  MH05_vio_loop.csv  V101_vio.csv  V101_vio_loop.csv  V102_vio.csv  V102_vio_loop.csv  V103_vio.csv  V103_vio_loop.csv  V201_vio.csv  V201_vio_loop.csv  V202_vio.csv  V202_vio_loop.csv  V203_vio.csv  V203_vio_loop.csv  command.txt  data.txt  getATE_RPEr_RPEt.ipynb  getATE_RPEr_RPEt.py  rmse_values.txt  run.ipynb  run.py  run.txt  terminal_output.txt
output/mono+imu+sp+lg+briefloop/: MH01_vio.csv  MH01_vio_loop.csv  MH02_vio.csv  MH02_vio_loop.csv  MH03_vio.csv  MH03_vio_loop.csv  MH04_vio.csv  MH04_vio_loop.csv  MH05_vio.csv  MH05_vio_loop.csv  V101_vio.csv  V101_vio_loop.csv  V102_vio.csv  V102_vio_loop.csv  V201_vio.csv  V201_vio_loop.csv  V202_vio.csv  V202_vio_loop.csv  V203_vio.csv  V203_vio_loop.csv
output/truth/: results.ods
support_files/: small_db.yml
vins_estimator/: CMakeLists.txt
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  parameters.cpp
vins_estimator/src/factor/: integration_base.h
vins_estimator/src/featureTracker/: feature_tracker.cpp
vins_estimator/src/utility/: visualization.cpp
